@@ -1,3 +1,12 @@
+2020-05-20  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	compose window: BalsaSendmsg:ident may be destroyed while the
+	compose window is open, and the only way we can know is if it
+	is removed from BalsaApplication:indenties
+
+	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler): check if
+	BalsaSendmsg:ident can be found in BalsaApplication:indenties.
+
 2020-05-14  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Bump required versions as discussed in
